# lingxin-esp32

./: .gitignore  README.md  README_ja.md  README_zh.md
components/LINGXIN_SDK/: CMakeLists.txt
components/LINGXIN_SDK/AI2T_LingXinEngine/: .gitignore  README.md  makefile  switch_to_normal_mode.sh  switch_to_test_mode.sh
components/LINGXIN_SDK/AI2T_LingXinEngine/.githooks/: pre-commit  setup.sh
components/LINGXIN_SDK/AI2T_LingXinEngine/inc/func/: asr.h  chat_api.h  lingxin_log.h  lingxin_memory.h  llm_generate.h  tts.h
components/LINGXIN_SDK/AI2T_LingXinEngine/inc/system_adapter/: audio_buffer_play.h  chat_state_machine_event.h  lingxin_device_info.h  lingxin_file.h  lingxin_http.h  lingxin_local_player.h  lingxin_mutex.h  lingxin_printf.h  lingxin_recorder.h  lingxin_semaphore.h  lingxin_system.h  lingxin_system_time.h  lingxin_thread.h  lingxin_timer.h  lingxin_websocket.h
components/LINGXIN_SDK/AI2T_LingXinEngine/src/asr/: asr.c
components/LINGXIN_SDK/AI2T_LingXinEngine/src/inc/: cJSON.h  (+22 more)
components/LINGXIN_SDK/AI2T_LingXinEngine/tests/: cases.json  lingxin_test_runner.c  lingxin_test_runner.h
components/LINGXIN_SDK/AI2T_LingXinEngine/usecases/: usecase_01_continuous_chat_with_vad.c  usecase_02_chat_with_key.c  usecase_03_translate_en.c
components/LINGXIN_SDK/adapter_LingXin/: lingxin_audio_record.c  lingxin_buffer_play.c  lingxin_device_info.c  lingxin_file.c  lingxin_http.c  lingxin_local_play.c  lingxin_mutex.c  lingxin_printf.c  lingxin_semaphore.c  lingxin_sys_time.c  lingxin_system.c  lingxin_thread.c  lingxin_timer.c  lingxin_websocket.c
(+80 files in other folders)
